更改management.context-path的值，达到修改actuator上下文路径的目的

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+
+# 名字为password、key、secret（或者最后一段是）的属性，actuator展示时，会将值用*替代
 spring.datasource.data-password=sdfljsd
 spring.mvc.view=1
 
+# 暴雷应用的信息
 info.contact.email=wungcc@gmail.com
 info.contact.phone=18711112222
+
+# 更改actuator的上下文路径
+management.context-path=/mgmt
